--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,19 +4,21 @@
         <title>Django Girls Blog</title>
     </head>
     <body>
+
         <header>
             <h1><a href="">Django Girls Blog</a></h1>
         </header>
-        <article>
-            <time>published:</time>
-            <h2><a href="">My 1st post</a></h2>
-            <p>wadyadgaodufdiuf</p>
-        </article>
-
-        <article>
-            <time>published:</time>
-            <h2><a href="">My 2nd post</a></h2>
-            <p>zxcvzxcvzxvzx</p>
-        </article>
+        {% for post in posts %}
+            {{post}}
+            <article>
+                <time>published: {{post.published_date}}</time>
+                <h2><a href="">{{post.title}}</a></h2>
+                <p>{{post.text|linebreaksbr}}</p>
+            </article>
+        {% endfor %}
+<!--            <time>published:</time>-->
+<!--            <h2><a href="">My 2nd post</a></h2>-->
+<!--            <p>zxcvzxcvzxvzx</p>-->
+<!--        </article>-->
     </body>
 </html>
